<resources>
    <string name="app_name">UniQueue</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_calnet_id">CalNet ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_as_stu">Sign in as student</string>
    <string name="action_sign_as_inst">Sign in as instructor</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_calnet">Log In with CalNet</string>
    <string name="title_active_queues">Active Queues</string>
    <string name="hint_text">Enter your question in detail</string>
    <string name="attach_image">ATTACH IMAGE</string>
    <string name="estimated_wait_time_title">Estimated wait time is</string>
    <string name="title_join_the_queue">Join the Queue</string>
    <string name="title_in_position">You will be in position</string>
    <string name="text_assign">Assign to me</string>
    <string name="text_helping">Mark as helping</string>
    <string name="text_helped">Mark as resolved</string>
    <string name="title_activity_instr_queue_list">InstrQueueListActivity</string>
    <string name="createQueueButton">Create a new Queue</string>
    <string name="enter_queue_name">eg: CS61A - David\'s OH</string>
    <string name="enter_queue_location">eg: Cory 241</string>
</resources>
